crates/tui/tests/storybook/snapshots/app_dialog_permission__edit_file_long_path_permission_dialog_wraps.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* edit_file smelt-storybook-session-93e4220e873c55398e6e22f  14:37:03
            f065d617e27efc1a9b326032e323d00a522764901/plans
            /20260618-083946-virtual-transcript-performance
            /plan.md




──────────────────────────────────────────────────────────────────────
 edit_file: smelt-storybook-session-93e4220e873c55398e6e22ff065d617e
            7efc1a9b326032e323d00a522764901/plans/20260618-083946-vi
            tual-transcript-performance/plan.md
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 1 - # Plan
 1 + # Updated plan
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 Allow?
  1. allow once
  2. deny
  3. allow edit_file for this session
  4. allow edit_file in workspace ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
