crates/tui/tests/storybook/snapshots/app_dialog_permission__edit_file_long_path_permission_dialog_wraps.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 24
  0   0   1 fg=AnsiValue(208)
  0   1  10 attrs=dim
  0  59  10 attrs=dim
  1   0  12 attrs=dim
  2   0  12 attrs=dim
  3   0  12 attrs=dim
  8   0  70 fg=AnsiValue(208)
  9   1   9 fg=AnsiValue(208)
 12   0  70 fg=AnsiValue(244)
 13   0   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
 13   3   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
 13   5   2 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 60, g: 20, b: 20 }
 13   7   1 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 110, g: 35, b: 35 }
 13   8   3 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  11  58 bg=Rgb { r: 60, g: 20, b: 20 }
 14   0   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
 14   3   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
 14   5   2 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 20, g: 50, b: 20 }
 14   7   9 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 35, g: 95, b: 35 }
 14  16   3 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  19  50 bg=Rgb { r: 20, g: 50, b: 20 }
 15   0  70 fg=AnsiValue(244)
 16   1   6 attrs=dim
 17   0   1 bg=AnsiValue(237)
 17   1   1 fg=Black bg=White
 17   2   3 bg=AnsiValue(237) attrs=dim
 17   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 17  15  55 bg=AnsiValue(237)
 18   1   4 attrs=dim
 19   1   4 attrs=dim
 20   1   4 attrs=dim
 22   2  26 attrs=dim
 23   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 23  10  54 bg=AnsiValue(233)
 23  64   6 fg=AnsiValue(244) bg=AnsiValue(233)
