crates/tui/tests/storybook/snapshots/app_dialog_permission__edit_file_permission_dialog_multiline_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* edit_file src/lib.rs                                                 14:37:03










────────────────────────────────────────────────────────────────────────────────
 edit_file: src/lib.rs
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 1 - fn add(a: i32, b: i32) -> i32 {
 2 -     a + b
 1 + fn add(a: i64, b: i64) -> i64 {
 2 +     a.checked_add(b).expect("overflow")
 3   }
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 Allow?
  1. allow once
  2. deny
  3. allow edit_file for this session
  4. allow edit_file in workspace ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
