crates/tui/tests/storybook/snapshots/app_dialog_permission__edit_file_permission_dialog_with_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* edit_file src/main.rs                                                14:37:03







────────────────────────────────────────────────────────────────────────────────
 edit_file: src/main.rs
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 1   fn main() {
 2 -     println!("hello, world");
 2 +     println!("hello, smelt");
 3   }
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 Allow?
  1. allow once
  2. deny
  3. allow edit_file for this session
  4. allow edit_file in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
