crates/tui/tests/storybook/snapshots/app_dialog_permission__edit_file_permission_dialog_with_diff.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 24
  0   0   1 fg=AnsiValue(208)
  0   1  10 attrs=dim
  0  69  10 attrs=dim
  8   0  80 fg=AnsiValue(208)
  9   1   9 fg=AnsiValue(208)
 10   0  80 fg=AnsiValue(244)
 11   0   3 fg=AnsiValue(244)
 11   5   2 fg=Rgb { r: 102, g: 217, b: 239 }
 11   7   1 fg=Rgb { r: 248, g: 248, b: 242 }
 11   8   4 fg=Rgb { r: 166, g: 226, b: 46 }
 11  12   4 fg=Rgb { r: 248, g: 248, b: 242 }
 12   0   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
 12   3   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
 12   5  13 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 12  18   8 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 60, g: 20, b: 20 }
 12  26   5 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 110, g: 35, b: 35 }
 12  31   1 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 60, g: 20, b: 20 }
 12  32   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 12  34  45 bg=Rgb { r: 60, g: 20, b: 20 }
 13   0   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
 13   3   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
 13   5  13 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 13  18   8 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 20, g: 50, b: 20 }
 13  26   5 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 35, g: 95, b: 35 }
 13  31   1 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 20, g: 50, b: 20 }
 13  32   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 13  34  45 bg=Rgb { r: 20, g: 50, b: 20 }
 14   0   3 fg=AnsiValue(244)
 14   5   1 fg=Rgb { r: 248, g: 248, b: 242 }
 15   0  80 fg=AnsiValue(244)
 16   1   6 attrs=dim
 17   0   1 bg=AnsiValue(237)
 17   1   1 fg=Black bg=White
 17   2   3 bg=AnsiValue(237) attrs=dim
 17   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 17  15  65 bg=AnsiValue(237)
 18   1   4 attrs=dim
 19   1   4 attrs=dim
 20   1   4 attrs=dim
 22   2  26 attrs=dim
 23   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 23  10  64 bg=AnsiValue(233)
 23  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
