crates/tui/tests/storybook/snapshots/app_dialog_permission__load_skill_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* load_skill customize                                       14:37:03
  0 lines





──────────────────────────────────────────────────────────────────────
 load_skill: customize

 Allow?
  1. allow once
  2. deny
  3. allow load_skill for this session
  4. allow load_skill in workspace ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
